# ldp-protocol

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  RFC.md
docs/superpowers/plans/: 2026-03-22-phase1-hardening-ecosystem-launch.md
docs/superpowers/specs/: 2026-03-22-phase1-hardening-ecosystem-launch-design.md
examples/: demo_smart_routing.py  identity_card.json  rust_quickstart.rs  session_flow.json
examples/python_sdk/: ldp_client.py  ldp_delegate.py  multi_delegate_routing.py  requirements.txt
sdk/python/: README.md  pyproject.toml
sdk/python/src/ldp_protocol/: __init__.py  client.py  delegate.py  replay.py  router.py  signing.py
sdk/python/src/ldp_protocol/types/: __init__.py  capability.py  contract.py  error.py  identity.py  messages.py  payload.py  provenance.py  session.py  trust.py  verification.py
sdk/python/tests/: test_delegate.py  test_replay.py  test_router.py  test_signing.py  test_types.py
src/: adapter.rs  client.rs  config.rs  lib.rs  plugin.rs  protocol.rs  replay.rs  server.rs  session_manager.rs  signing.rs
src/types/: capability.rs  contract.rs  error.rs  identity.rs  messages.rs  mod.rs  payload.rs  provenance.rs  session.rs  trust.rs  verification.rs
tests/: ldp_integration.rs
